Adicionada imagem do uc arm e corrigido typo

--- a/resumo/resumo.tex
+++ b/resumo/resumo.tex
@@ -107,7 +107,7 @@ tudo em uma mesma instrução.
 Uma notória vantagem do uso do paradigma CISC se dá por facilitar a construção
 de compiladores e a programação em baixo nível, pois as instruções fornecem um
 pequeno nível de abstração. Além disso, por implementar as instruções a comuns
-nível de \texti{hardware}, o consumo de memória, tempo de execução e tamanho dos
+nível de \textit{hardware}, o consumo de memória, tempo de execução e tamanho dos
 programas costumam ser menores. Uma desvantagem direta ao paradigma é o fato do
 projeto do hardware se tornar muito mais trabalhoso e complexo, além de
 necessitar maior quantidade de componentes, e por consequência, aumento de
