--- a/resumo/resumo.tex
+++ b/resumo/resumo.tex
@@ -4,6 +4,8 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{float}
+\usepackage[utf8]{inputenc}
+\usepackage[brazil]{babel}
 
 \graphicspath{ {./images/} }
 \captionsetup{font=small}
@@ -417,4 +419,10 @@ oligopólio das \textit{big techs}, cujos serviços principais são pautados na
 manipulação, processamento e posse dos dados de seus clientes e usuários. Além
 disso, a arquitetura nuvem possui menor flexibilidade quanto ao controle e
 conhecimento do usuário sobre as camadas inferiores do sistema.
+
+\nocite{stallings}
+
+\bibliographystyle{plain}
+\bibliography{ref}
+
 \end{document}
