--- a/resumo/resumo.tex
+++ b/resumo/resumo.tex
@@ -13,8 +13,8 @@
 \title{Informação Profissional em Ciência da Computação:\\
        Arquitetura de Computadores}
 \author{Carlos Eduardo Gallo Filho \\
-        Caio \\
-        Pedro}
+        Caio Uehara Martins\\
+        Pedro Henrique Mendes de Lima}
 
 \date{\today}
 
